syntax = "proto3";
package io.restorecommerce.search;

import "google/protobuf/any.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/options.proto";

// Service provides the CRUD operations
service SearchService {
  rpc Search (SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  optional string collection = 1;
  optional string text = 2;
  repeated string acls = 3;
  optional io.restorecommerce.auth.Subject subject = 4;
}

message SearchResponse {
  repeated google.protobuf.Any data = 1;
}
